RESOLVED FIXED197188
[iOS] element.focus() sometimes fails to reveal the focused element when it becomes editable dynamically
https://bugs.webkit.org/show_bug.cgi?id=197188
Summary [iOS] element.focus() sometimes fails to reveal the focused element when it b...
Ryosuke Niwa
Reported 2019-04-22 23:24:27 PDT
When an element becomes editable and then immediately focused via element.focus(), WebKit fails to reveal the element due to the conflicts between scroll-to-reveal code in WeCore / WebContent process and UI process. <rdar://problem/43613941>
Attachments
Fixes the bug (8.70 KB, patch)
2019-04-22 23:38 PDT, Ryosuke Niwa
wenson_hsieh: review+
Ryosuke Niwa
Comment 1 2019-04-22 23:38:54 PDT
Created attachment 368015 [details] Fixes the bug
Wenson Hsieh
Comment 2 2019-04-23 07:57:32 PDT
Comment on attachment 368015 [details] Fixes the bug View in context: https://bugs.webkit.org/attachment.cgi?id=368015&action=review > Source/WebCore/ChangeLog:8 > + The bug was caused by the scroll-to-reveal code trgiggered by Element::updateFocusAppearance updating Nit - "trgiggered" => triggered > Source/WebCore/ChangeLog:10 > + _zoomToRevealFocusedElement in WKWebContent view had already scrolled the frame view. Nit - "WKWebContent view" => WKContentView
Ryosuke Niwa
Comment 3 2019-04-23 10:10:13 PDT
Note You need to log in before you can comment on or make changes to this bug.