Source/WebCore/dom/Element.cpp
@@ -2785,6 +2785,7 @@ void Element::updateFocusAppearance(SelectionRestorationMode, SelectionRevealMod
         if (frame->selection().shouldChangeSelection(newSelection)) {
             frame->selection().setSelection(newSelection, FrameSelection::defaultSetSelectionOptions(), Element::defaultFocusTextStateChangeIntent());
             frame->selection().revealSelection(revealMode);
+            return;
         }
     }
 
